feat&fix(db&provicer): fix db migrations, remove foreignKey, add provider api framework
